--- a/plugins/gui/frontend/gosa/source/translation/de.po
+++ b/plugins/gui/frontend/gosa/source/translation/de.po
@@ -1,17 +1,18 @@
 # Cajus Pollmeier <pollmeier@gonicus.de>, 2017.
-# 
+# Tobias Bräutigam <braeutigam@gonicus.de>, 2018.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: you@your.org\n"
 "POT-Creation-Date: 2012-07-11 14:05+0100\n"
-"PO-Revision-Date: 2017-01-13 10:11+0100\n"
-"Last-Translator: Cajus Pollmeier <pollmeier@gonicus.de>\n"
+"PO-Revision-Date: 2018-02-26 16:04+0100\n"
+"Last-Translator: Tobias Bräutigam <braeutigam@gonicus.de>\n"
 "Language-Team: Deutsch <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Gtranslator 2.91.7\n"
 "X-Language: de_DE\n"
 "X-Source-Language: de\n"
@@ -62,11 +63,11 @@ msgstr "Browserkonfiguration wird nicht unterstützt."
 
 #: gosa/Tools.js:82
 msgid "The presented device is not eligible for this request"
-msgstr ""
+msgstr "Das Gerät ist nicht geignet für diese Anfrage"
 
 #: gosa/Tools.js:84
 msgid "Timeout reached before request could be satisfied"
-msgstr ""
+msgstr "Time-out erreicht bevor die Anfrage beantwortet werden konnte"
 
 #: gosa/data/controller/BackendChanges.js:245
 msgid ""
@@ -74,6 +75,9 @@ msgid ""
 "makes it impossible to merge the changes. Therefore, the object has been "
 "closed. Sorry."
 msgstr ""
+"Während Sie das Objekt bearbeitet haben wurde dieses geändert. Da die "
+"Änderungen nicht zusammengeführt werden konnten, wurde dieses Objekt "
+"geschlossen."
 
 #: gosa/data/controller/BackendChanges.js:270
 #: gosa/data/controller/BackendChanges.js:279
@@ -82,11 +86,11 @@ msgstr "entfernt"
 
 #: gosa/data/controller/Dashboard.js:119
 msgid "Error loading part '%1'"
-msgstr ""
+msgstr "Fehler beim Laden des Parts: %1"
 
 #: gosa/data/controller/Dashboard.js:144
 msgid "Error loading widget '%1'"
-msgstr ""
+msgstr "Fehler beim Laden des Widgets: %1"
 
 #: gosa/data/controller/Extensions.js:251
 msgid "Failed to extend the %1 extension: %2"
@@ -99,19 +103,15 @@ msgstr "Fehler beim Zurückziehen der Erweiterung %1: %2"
 #: gosa/data/controller/ObjectEdit.js:162
 msgid ""
 "The object was automatically closed because it was removed in the backend."
-msgstr ""
+msgstr "Das Objekt wurde automatisch geschlossen, weil es gelöscht wurde."
 
 #: gosa/data/controller/Workflow.js:175
 msgid "Timeout waiting for workflow execution"
-msgstr ""
-
-#: gosa/engine/extensions/Validator.js:36
-msgid "Prename and user name may not be the same."
-msgstr ""
+msgstr "Time-out beim Ausführen des Workflows"
 
 #: gosa/engine/extensions/validators/Constraints.js:89
 msgid "Value conflicts with '%1' option value '%2'"
-msgstr ""
+msgstr "Der Wert kollidiert mit dem Optionswert '%2' von '%1'"
 
 #: gosa/io/Rpc.js:303
 msgid "Communication with the backend failed!"
@@ -119,57 +119,56 @@ msgstr "Kommunikation mit dem Server ist fehlgeschlagen!"
 
 #: gosa/io/Sse.js:109
 msgid "%1 backend error"
-msgstr ""
+msgstr "%1 Backend Fehler"
 
 #: gosa/io/Sse.js:110
 msgid "%1 operation failed"
-msgstr ""
+msgstr "%1 Vorgang fehlgeschlagen"
 
 #: gosa/view/Search.js:50 gosa/plugins/search/Main.js:59
 msgid "Please enter your search..."
 msgstr "Bitte geben Sie den Suchtext ein..."
 
-#: gosa/view/Search.js:73 gosa/view/Search.js:92
-#: gosa/plugins/search/Main.js:65 gosa/plugins/search/Main.js:91
-#: gosa/ui/dialogs/ItemSelector.js:281
+#: gosa/view/Search.js:73 gosa/view/Search.js:92 gosa/plugins/search/Main.js:65
+#: gosa/plugins/search/Main.js:91 gosa/ui/dialogs/ItemSelector.js:281
 msgid "Search"
 msgstr "Suche"
 
 #: gosa/plugins/separator/Main.js:66
 msgid "Separator"
-msgstr ""
+msgstr "Trenner"
 
 #: gosa/plugins/separator/Main.js:79
 msgid "Title"
-msgstr ""
+msgstr "Titel"
 
 #: gosa/plugins/separator/Main.js:86
 msgid "Normal"
-msgstr ""
+msgstr "Normal"
 
 #: gosa/plugins/separator/Main.js:87
 msgid "Bold"
-msgstr ""
+msgstr "Fett"
 
 #: gosa/plugins/separator/Main.js:89
 msgid "Font"
-msgstr ""
+msgstr "Schriftart"
 
 #: gosa/plugins/separator/Main.js:96
 msgid "No border"
-msgstr ""
+msgstr "Kein Rand"
 
 #: gosa/plugins/separator/Main.js:97
 msgid "Top border"
-msgstr ""
+msgstr "Oberer Rand"
 
 #: gosa/plugins/separator/Main.js:98
 msgid "Bottom border"
-msgstr ""
+msgstr "Unterer Rand"
 
 #: gosa/plugins/separator/Main.js:100
 msgid "Border position"
-msgstr ""
+msgstr "Rand Position"
 
 #: gosa/plugins/workflowstarter/Main.js:276
 msgid "Workflow starter"
@@ -208,9 +207,8 @@ msgstr "Ergebnisse filtern"
 msgid "OK"
 msgstr "OK"
 
-#: gosa/ui/widgets/WorkflowWizard.js:277
-#: gosa/ui/dialogs/PromptTextDialog.js:70 gosa/ui/base/Buttons.js:50
-#: gosa/ui/dialogs/ItemSelector.js:209
+#: gosa/ui/widgets/WorkflowWizard.js:277 gosa/ui/dialogs/PromptTextDialog.js:70
+#: gosa/ui/base/Buttons.js:50 gosa/ui/dialogs/ItemSelector.js:209
 msgid "Cancel"
 msgstr "Abbrechen"
 
@@ -241,10 +239,14 @@ msgid ""
 "their dependencies (see list below). Click '%1' to add the missing "
 "extensions or click '%2' to remove those with broken dependencies."
 msgstr ""
+"Dieses Objekt hat Erweiterungen, die andere, fehlende Erweiterungen als "
+"Abhängigkeit habe (siehe Liste unten). Klicken Sie auf '%1', um die "
+"fehlenden Erweiterungen hinzuzufügen, oder auf '%2', um die mit fehlenden "
+"Abhängigkeiten zu entfernen."
 
 #: gosa/ui/dialogs/AddDependentExtensions.js:51
 msgid "List of extensions and their missing dependencies:"
-msgstr ""
+msgstr "Liste von Erweiterungen und deren fehlenden Abhängigkeiten:"
 
 #: gosa/ui/dialogs/AddDependentExtensions.js:75
 msgid "depends on"
@@ -255,8 +257,7 @@ msgid "Object: %1"
 msgstr "Objekt: %1"
 
 #: gosa/ui/dialogs/ClosingObject.js:30 gosa/ui/dialogs/ClosingObject.js:37
-msgid ""
-"This object will be closed in %1 seconds if you don't continue editing!"
+msgid "This object will be closed in %1 seconds if you don't continue editing!"
 msgstr ""
 "Das Objekt wird in %1 Sekunden geschlossen wenn es nicht weiter bearbeitet "
 "wird!"
@@ -289,7 +290,7 @@ msgstr "Ungespeicherte Änderungen"
 #: gosa/view/AbstractEditableView.js:106
 #: gosa/ui/dialogs/EditDashboardWidget.js:185 gosa/view/Dashboard.js:382
 msgid "Do you want to discard those changes?"
-msgstr ""
+msgstr "Möchten Sie die Änderungen verwerfen?"
 
 #: gosa/ui/dialogs/Error.js:18 gosa/ui/dialogs/RpcError.js:23
 msgid "Error"
@@ -322,31 +323,31 @@ msgstr "Information"
 #: gosa/ui/settings/Editor.js:80 gosa/ui/settings/Webhooks.js:127
 #: gosa/ui/dialogs/ItemSelector.js:272
 msgid "Search..."
-msgstr ""
+msgstr "Suchen..."
 
 #: gosa/ui/dialogs/RegisterWebhook.js:25 gosa/ui/dialogs/ItemSelector.js:291
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 #: gosa/ui/dialogs/ItemSelector.js:304
 msgid "Select Base"
-msgstr ""
+msgstr "Basis auswählen"
 
 #: gosa/view/Tree.js:288 gosa/ui/dialogs/ItemSelector.js:309
 msgid "Filter"
-msgstr ""
+msgstr "Filter"
 
 #: gosa/ui/dialogs/Loading.js:51
 msgid "Indexing"
-msgstr ""
+msgstr "Indiziere"
 
 #: gosa/ui/dialogs/Loading.js:69
 msgid "Step %1 of %2"
-msgstr ""
+msgstr "Schritt %1 von %2"
 
 #: gosa/ui/dialogs/Loading.js:71
 msgid "Step %1"
-msgstr ""
+msgstr "Schritt %1"
 
 #: gosa/ui/dialogs/Loading.js:90
 msgid "Initializing"
@@ -379,7 +380,7 @@ msgstr "Ungültige Anmeldung..."
 #: gosa/ui/dialogs/actions/Change2FAMethod.js:179
 #: gosa/ui/dialogs/LoginDialog.js:231
 msgid "Device responded with error '%1': %2"
-msgstr ""
+msgstr "Fehlermeldung von Gerät %1: %2"
 
 #: gosa/ui/dialogs/MergeDialog.js:22
 msgid "Merge required"
@@ -403,22 +404,22 @@ msgstr "Erweiterung"
 
 #: gosa/ui/dialogs/MergeDialog.js:186
 msgid ""
-"The object has been updated while you were modifying it. Please determine to"
-" keep your local or the server version of the item. You can achieve this by "
+"The object has been updated while you were modifying it. Please determine to "
+"keep your local or the server version of the item. You can achieve this by "
 "marking the appropriate one."
 msgstr ""
 "Das Objekt wurde während des Bearbeitungsvorganges verändert. Bitte "
-"bestimmen Sie ob Ihre lokale oder die Server-Version übernommen werden soll."
-" Dies können Sie durch Markieren des entsprechenden Wertes erreichen."
+"bestimmen Sie ob Ihre lokale oder die Server-Version übernommen werden soll. "
+"Dies können Sie durch Markieren des entsprechenden Wertes erreichen."
 
 #: gosa/ui/dialogs/PasswordRecovery.js:22
 msgid "Password recovery"
-msgstr ""
+msgstr "Passwort Wiederherstellung"
 
 #: gosa/ui/dialogs/PasswordRecovery.js:97
 #: gosa/ui/dialogs/PasswordRecovery.js:267
 msgid "Start new password request"
-msgstr ""
+msgstr "Neues Passwort anfordern"
 
 #: gosa/view/Dashboard.js:399 gosa/ui/dialogs/PasswordRecovery.js:113
 msgid "Save"
@@ -426,7 +427,7 @@ msgstr "Speichern"
 
 #: gosa/ui/dialogs/PasswordRecovery.js:114
 msgid "Please select %1 different questions and answer them."
-msgstr ""
+msgstr "Bitte wählen Sie %1 Fragen aus und beantworten diese."
 
 #: gosa/ui/dialogs/PasswordRecovery.js:120
 msgid "Question %1"
@@ -434,7 +435,7 @@ msgstr "Frage %1"
 
 #: gosa/ui/dialogs/PasswordRecovery.js:125
 msgid "Invalid answer."
-msgstr ""
+msgstr "Ungültige Antwort"
 
 #: gosa/ui/dialogs/PasswordRecovery.js:126
 msgid "Answer %1"
@@ -448,22 +449,27 @@ msgstr "Senden"
 #: gosa/ui/dialogs/PasswordRecovery.js:141
 msgid "Please answer your recovery questions to proceed."
 msgstr ""
+"Bitte beantworten Sie die Wiederherstellungsfragen, um fortfahren zu können."
 
 #: gosa/ui/dialogs/PasswordRecovery.js:171
 msgid "Please avoid duplicate questions."
-msgstr ""
+msgstr "Bitte vermeiden Sie doppelte Fragen."
 
 #: gosa/ui/dialogs/PasswordRecovery.js:219
 msgid ""
 "An e-mail has been send to your account. Please follow the instructions in "
 "this mail. You can close this window now."
 msgstr ""
+"Eine E-Mail wurde an Sie versandt. Bitte folgen Sie den Instruktionen in "
+"dieser E-Mail. Sie können dieses Fenster jetzt schließen."
 
 #: gosa/ui/dialogs/PasswordRecovery.js:249
 msgid ""
 "At least one answer is wrong, please try again. You can reload this window "
 "to receive other questions."
 msgstr ""
+"Mindestens eine Antwort ist falsch, bitte versuchen Sie es noch einmal. Sie "
+"können dieses Fenster neu laden, um andere Fragen zu erhalten."
 
 #: gosa/view/Workflows.js:262 gosa/view/Dashboard.js:377
 #: gosa/ui/dialogs/PasswordRecovery.js:271
@@ -476,15 +482,17 @@ msgstr "Ok"
 
 #: gosa/ui/dialogs/RegisterWebhook.js:20
 msgid "Register webhook"
-msgstr ""
+msgstr "Webhook registrieren"
 
 #: gosa/ui/dialogs/RegisterWebhook.js:24
 msgid "Sender name"
-msgstr ""
+msgstr "Name des Absenders"
 
 #: gosa/ui/dialogs/RegisterWebhook.js:73
 msgid "Please enter a string containing ASCII letters and optional hyphens"
 msgstr ""
+"Bitte geben Sie einen Text ein, der ASCII-Zeichen und optional Bindestriche "
+"enthält"
 
 #: gosa/ui/dialogs/RemoveObject.js:22
 msgid "Remove object"
@@ -526,17 +534,20 @@ msgstr[1] "Möchten Sie die abhängenden Erweiterungen entfernen?"
 
 #: gosa/ui/dialogs/U2FInfo.js:22
 msgid "Performing U2F action"
-msgstr ""
+msgstr "Führe U2F Aktion aus"
 
 #: gosa/ui/dialogs/U2FInfo.js:24
 msgid "Please touch the flashing U2F device now."
-msgstr ""
+msgstr "Bitte berühren Sie das blinkende U2F Gerät"
 
 #: gosa/ui/dialogs/U2FInfo.js:27
 msgid ""
 "You may be prompted to allow the site permission to access your security "
 "keys. After granting permission, the device will start to blink."
 msgstr ""
+"Möglicherweise müssen Sie dieser Seite den Zugriff auf Ihre Sicherheits-"
+"Schlüssel gewähren. Nachdem Sie dies getan haben, wird das Gerät anfangen zu "
+"blinken."
 
 #: gosa/ui/dialogs/Warning.js:22
 msgid "Warning"
@@ -568,15 +579,17 @@ msgid ""
 "Please scan the QR code with your mobile device or enter the code to your "
 "authentication application."
 msgstr ""
+"Bitte scannen Sie den QR-Code mit Ihrem Mobiltelefon oder geben den Code aus "
+"Ihrer Authentifizierungs-Applikation ein."
 
 #: gosa/ui/dialogs/actions/Change2FAMethod.js:206
-msgid "Code: <b>"
-msgstr ""
+msgid "Code: <b>%1</b>"
+msgstr "Code: <b>%1</b>"
 
 #: gosa/ui/dialogs/actions/ChangeSambaPasswordDialog.js:21
 #: gosa/ui/dialogs/actions/ChangePasswordDialog.js:18
 msgid "Change password"
-msgstr ""
+msgstr "Passwort ändern"
 
 #: gosa/ui/dialogs/actions/ChangePasswordDialog.js:70
 msgid "Encryption"
@@ -595,7 +608,7 @@ msgstr "Neues Passwort (wiederholt)"
 #: gosa/ui/dialogs/actions/ChangePasswordDialog.js:81
 #: gosa/ui/dialogs/actions/ChangePasswordDialog.js:118
 msgid "Password quality"
-msgstr ""
+msgstr "Passwortqualität"
 
 #: gosa/ui/dialogs/actions/ChangePasswordDialog.js:81
 #: gosa/ui/dialogs/actions/ChangePasswordDialog.js:124
@@ -656,18 +669,19 @@ msgstr "Nachricht"
 
 #: gosa/ui/dialogs/actions/UploadPPD.js:21
 msgid "Upload PPD file"
-msgstr ""
+msgstr "PPD-Datei hochladen"
 
 #: gosa/ui/dialogs/actions/UploadPPD.js:116
 msgid ""
 "PPD files describe the features and capabilities of a PostScript printer. "
-"Please select the appropriate file distributed by the vendor of your "
-"printer."
+"Please select the appropriate file distributed by the vendor of your printer."
 msgstr ""
+"PPD-Dateien beschreiben die Funktionen und Fähigkeiten eines PostScript "
+"Druckers. Bitte wählen Sie die passende Datei für Ihren Drucker aus."
 
 #: gosa/ui/dialogs/actions/UploadPPD.js:125
 msgid "Select file..."
-msgstr ""
+msgstr "Datei auswählen..."
 
 #: gosa/ui/settings/Editor.js:74
 msgid "Settings"
@@ -687,7 +701,7 @@ msgstr "Wert"
 
 #: gosa/ui/settings/Webhooks.js:69
 msgid "Webhooks"
-msgstr ""
+msgstr "Webhooks"
 
 #: gosa/ui/settings/Webhooks.js:97 gosa/ui/widgets/ObjectEdit.js:316
 #: gosa/view/Tree.js:142 gosa/view/Tree.js:280
@@ -716,15 +730,17 @@ msgstr "Name"
 
 #: gosa/ui/settings/Webhooks.js:151
 msgid "Mime-Type"
-msgstr ""
+msgstr "Mime-Type"
 
 #: gosa/ui/settings/Webhooks.js:152
 msgid "Format"
-msgstr ""
+msgstr "Format"
 
 #: gosa/ui/settings/Webhooks.js:247
-msgid "The emitter of packages for this webhook must use this data:"
+msgid "Please use the following configuration to send data to this webhook:"
 msgstr ""
+"Bitte benutzen Sie die folgende Konfiguration, um Daten an diesen Webhook zu "
+"senden:"
 
 #: gosa/ui/settings/Webhooks.js:253
 msgid "SHA-512, secret encrypted hash of the content body"
@@ -737,8 +753,8 @@ msgstr "Webhook löschen"
 #: gosa/ui/settings/Webhooks.js:300
 msgid "Please make sure that there are no services left using this webhook."
 msgstr ""
-"Bitte stellen Sie sicher, dass es keine Dienst mehr gibt, die diesen Webhook"
-" nutzen."
+"Bitte stellen Sie sicher, dass es keine Dienst mehr gibt, die diesen Webhook "
+"nutzen."
 
 #: gosa/ui/settings/Webhooks.js:301
 msgid "Are you sure that you want to delete this webhook?"
@@ -758,7 +774,7 @@ msgstr "Applikationsparameter"
 
 #: gosa/ui/widgets/MenuEditWidget.js:300
 msgid "Enter name"
-msgstr ""
+msgstr "Name eingeben"
 
 #: gosa/ui/widgets/MultiEditContainer.js:62
 msgid "Add value"
@@ -858,7 +874,7 @@ msgstr "Workflow-Schritt %1 existiert nicht"
 
 #: gosa/ui/widgets/WorkflowWizard.js:232
 msgid "Saving..."
-msgstr ""
+msgstr "Speichern..."
 
 #: gosa/ui/widgets/WorkflowWizard.js:284
 msgid "Next"
@@ -925,11 +941,11 @@ msgstr[1] "%1 Sekunden"
 
 #: gosa/view/Search.js:407
 msgid ""
-"Please consider using a more specific search string or filters to reduce the"
-" result set. "
+"Please consider using a more specific search string or filters to reduce the "
+"result set. "
 msgstr ""
-"Bitte benutzen Sie eine genauere Suche oder die Filter, um die Ergebnismenge"
-" einzuschränken."
+"Bitte benutzen Sie eine genauere Suche oder die Filter, um die Ergebnismenge "
+"einzuschränken."
 
 #: gosa/view/Search.js:498 gosa/view/Search.js:527 gosa/view/Search.js:544
 msgid "All"
@@ -1012,28 +1028,17 @@ msgstr ""
 #~ msgstr[0] "%1 ungenaues Ergebnis"
 #~ msgstr[1] "%1 ungenaue Ergebnisse"
 
-#~ msgid ""
-#~ "Are you sure that you want to delete this webhook? Please make sure that "
-#~ "there are no services left using this webhook."
-#~ msgstr ""
-
 #~ msgid "Back"
 #~ msgstr "Zurück"
 
 #~ msgid "Background color"
 #~ msgstr "Hintergrundfarbe"
 
-#~ msgid "Change 2FA method..."
-#~ msgstr ""
-
 #~ msgid "Change password..."
 #~ msgstr "Passwort ändern..."
 
 #~ msgid "Choose"
 #~ msgstr "Auswählen"
-
-#~ msgid "Colspan"
-#~ msgstr ""
 
 #~ msgid "Loading %1 templates"
 #~ msgstr "Beziehe %1 Vorlagen."
@@ -1052,9 +1057,6 @@ msgstr ""
 #~ msgid "Open"
 #~ msgstr "Öffnen"
 
-#~ msgid "Please add a workflow dragging a workflow zip file into this window"
-#~ msgstr ""
-
 #~ msgid "Remove webhook"
 #~ msgstr "Webhook entfernen"
 
@@ -1067,14 +1069,14 @@ msgstr ""
 #~ msgid "Send message..."
 #~ msgstr "Nachricht senden..."
 
+#~ msgid "The emitter of packages for this webhook must use this data:"
+#~ msgstr "Der "
+
 #~ msgid "This object does not exist anymore!"
 #~ msgstr "Dieses Objekt existiert nicht mehr!"
 
 #~ msgid "This object has been closed by the backend!"
 #~ msgstr "Dieses Objekt wurde vom Backend geschlossen!"
-
-#~ msgid "Timout waiting for workflow execution"
-#~ msgstr ""
 
 #~ msgid "Two factor authentification:"
 #~ msgstr "Zwei Faktor Authentifizierung:"
